<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentLoan">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtTotalInterest"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/numMonthly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"
        android:ems="10"
        android:hint="@string/txtMonth"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/numYear"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/numYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/txtYear"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/numBal"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/numBal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="232dp"
        android:layout_marginEnd="128dp"
        android:layout_marginRight="128dp"
        android:ems="10"
        android:hint="@string/txtCreditBal"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnInterest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="11dp"
        android:text="@string/btnCalulate"
        app:layout_constraintEnd_toEndOf="@+id/numBal"
        app:layout_constraintTop_toBottomOf="@+id/numBal" />

    <TextView
        android:id="@+id/txtInterstPaid"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>