<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="42dp"
        android:layout_marginTop="41dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCalculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radConvert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtMoneyConversion"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radCredit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtCreditPayment"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radTotalInterest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtTotalInterest"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtAppointment"
            android:textSize="24sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="113dp"
        android:layout_height="46dp"
        android:layout_marginBottom="112dp"
        android:text="GO"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


</android.support.constraint.ConstraintLayout>