<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreditPayOff"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="7dp"
        android:layout_marginTop="24dp"
        android:text="@string/txtCredit"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/numCcb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/numCcb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:hint="Enter your credit card balance"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/numInterest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/numYear"
        android:layout_width="273dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="42dp"
        android:layout_marginStart="42dp"
        android:ems="10"
        android:hint="@string/txtYear"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/btnPayment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numInterest" />

    <EditText
        android:id="@+id/numInterest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp"
        android:ems="10"
        android:hint="@string/txtInterest"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/numYear"
        app:layout_constraintStart_toStartOf="@+id/numYear"
        app:layout_constraintTop_toBottomOf="@+id/numCcb" />

    <Button
        android:id="@+id/btnPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:layout_marginEnd="94dp"
        android:layout_marginLeft="94dp"
        android:layout_marginRight="94dp"
        android:layout_marginStart="94dp"
        android:text="@string/btnCalulate"
        app:layout_constraintBottom_toTopOf="@+id/minPayment"
        app:layout_constraintEnd_toEndOf="@+id/numYear"
        app:layout_constraintStart_toStartOf="@+id/numCcb"
        app:layout_constraintTop_toBottomOf="@+id/numYear" />

    <TextView
        android:id="@+id/minPayment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="116dp"
        android:layout_marginEnd="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginStart="34dp"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPayment" />
</android.support.constraint.ConstraintLayout>